--- a/app/src/main/res/layout/exercise_screen.xml
+++ b/app/src/main/res/layout/exercise_screen.xml
@@ -66,7 +66,8 @@
             android:layout_height="70dp"
             android:layout_gravity="center"
             android:background="@drawable/timer_background"
-            android:gravity="center">
+            android:gravity="center"
+            >
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tvSeconds"
